Converted to ES6.

--- a/blockie.html
+++ b/blockie.html
@@ -8,7 +8,7 @@
 
 <body>
     <canvas width="400" height="400" id="game"></canvas>
-    <script src="blockie.js"></script>
+    <script src="lib/blockie.js"></script>
 </body>
 
 </html>
