The game size is good and I made the text surrounding the canvas.

--- a/blockie.html
+++ b/blockie.html
@@ -7,7 +7,12 @@
 </head>
 
 <body>
-    <canvas width="400" height="400" id="game"></canvas>
+    <div id="title">Blockie</div>
+    <canvas width="512" height="512" id="game"></canvas>
+    <div id="gameInfo">
+        <div id="currentTime">Time: </div>
+        <div id="currentLevel">Level: </div>
+    </div>
     <script src="lib/blockie.js"></script>
 </body>
 
