I made a very rudimentary laser.

--- a/blockie.html
+++ b/blockie.html
@@ -13,6 +13,7 @@
         <div id="currentTime">Time: </div>
         <div id="currentLevel">Level: </div>
     </div>
+    <script src="https://unpkg.com/regenerator-runtime@0.13.1/runtime.js"></script>
     <script src="lib/blockie.js"></script>
 </body>
 
