Levels can change now and level one is decent.

--- a/blockie.html
+++ b/blockie.html
@@ -10,7 +10,7 @@
     <div id="title">Blockie</div>
     <canvas width="512" height="512" id="game"></canvas>
     <div id="gameInfo">
-        <div id="currentTime">Time: </div>
+        <div id="currentPoints">Points: </div>
         <div id="currentLevel">Level: </div>
     </div>
     <div id="messageDisplayer"></div>
