The timer is partially done.

--- a/blockie.html
+++ b/blockie.html
@@ -8,7 +8,13 @@
 
 <body>
     <div id="title">Blockie</div>
-    <canvas width="512" height="512" id="game"></canvas>
+    <div width="512" height="512" id="gameContainer">
+        <div id="countdownTimerContainer">
+            <div id="countdownTimerSprite"></div>
+            <div id="countdownTimer">Timer</div>
+        </div>
+        <canvas width="512" height="512" id="game"></canvas>
+    </div>
     <div id="gameInfo">
         <div id="currentPoints">Points: </div>
         <div id="currentLevel">Level: </div>
