The game scales while preserving its aspect ratio now.

--- a/blockie.html
+++ b/blockie.html
@@ -7,21 +7,23 @@
 </head>
 
 <body>
-    <div id="title">Blockie</div>
-    <div width="512" height="512" id="gameContainer">
-        <div id="countdownTimerContainer">
-            <div id="countdownTimerSprite"></div>
-            <div id="countdownTimer">Timer</div>
+    <div id="gameContainer">
+        <div id="title">Blockie</div>
+        <div width="512" height="512" id="canvasContainer">
+            <div id="countdownTimerContainer">
+                <div id="countdownTimerSprite"></div>
+                <div id="countdownTimer">Timer</div>
+            </div>
+            <canvas width="512" height="512" id="game"></canvas>
         </div>
-        <canvas width="512" height="512" id="game"></canvas>
+        <div id="gameInfo">
+            <div id="currentPoints">Points: </div>
+            <div id="currentLevel">Level: </div>
+        </div>
+        <div id="messageDisplayer"></div>
+        <script src="https://unpkg.com/regenerator-runtime@0.13.1/runtime.js"></script>
+        <script src="lib/blockie.js"></script>
     </div>
-    <div id="gameInfo">
-        <div id="currentPoints">Points: </div>
-        <div id="currentLevel">Level: </div>
-    </div>
-    <div id="messageDisplayer"></div>
-    <script src="https://unpkg.com/regenerator-runtime@0.13.1/runtime.js"></script>
-    <script src="lib/blockie.js"></script>
 </body>
 
 </html>
