The countdownTimer is mostly completed.

--- a/blockie.html
+++ b/blockie.html
@@ -12,7 +12,7 @@
         <div width="512" height="512" id="canvasContainer">
             <div id="countdownTimerContainer">
                 <div id="countdownTimerSprite"></div>
-                <div id="countdownTimer">Timer</div>
+                <div id="countdownTimer"></div>
             </div>
             <canvas width="512" height="512" id="game"></canvas>
         </div>
