Using the mouse to select levels from the menu is mostly functional.

--- a/index.html
+++ b/index.html
@@ -14,44 +14,44 @@
                 <div id="countdownTimerSprite"></div>
                 <div id="countdownTimer"></div>
             </div>
-            <div id="levelOneMenuIcon">
-                <div id="levelOneMenuIconText">1</div>
+            <div class="menuIcon" id="levelOneMenuIcon">
+                <div class="menuIconText" id="levelOneMenuIconText">1</div>
             </div>
-            <div id="levelTwoMenuIcon">
-                <div id="levelTwoMenuIconText">2</div>
+            <div class="menuIcon" id="levelTwoMenuIcon">
+                <div class="menuIconText" id="levelTwoMenuIconText">2</div>
             </div>
-            <div id="levelThreeMenuIcon">
-                <div id="levelThreeMenuIconText">3</div>
+            <div class="menuIcon" id="levelThreeMenuIcon">
+                <div class="menuIconText" id="levelThreeMenuIconText">3</div>
             </div>
-            <div id="levelFourMenuIcon">
-                <div id="levelFourMenuIconText">4</div>
+            <div class="menuIcon" id="levelFourMenuIcon">
+                <div class="menuIconText" id="levelFourMenuIconText">4</div>
             </div>
-            <div id="levelFiveMenuIcon">
-                <div id="levelFiveMenuIconText">5</div>
+            <div class="menuIcon" id="levelFiveMenuIcon">
+                <div class="menuIconText" id="levelFiveMenuIconText">5</div>
             </div>
-            <div id="levelSixMenuIcon">
-                <div id="levelSixMenuIconText">6</div>
+            <div class="menuIcon" id="levelSixMenuIcon">
+                <div class="menuIconText" id="levelSixMenuIconText">6</div>
             </div>
-            <div id="levelSevenMenuIcon">
-                <div id="levelSevenMenuIconText">7</div>
+            <div class="menuIcon" id="levelSevenMenuIcon">
+                <div class="menuIconText" id="levelSevenMenuIconText">7</div>
             </div>
-            <div id="levelEightMenuIcon">
-                <div id="levelEightMenuIconText">8</div>
+            <div class="menuIcon" id="levelEightMenuIcon">
+                <div class="menuIconText" id="levelEightMenuIconText">8</div>
             </div>
-            <div id="levelNineMenuIcon">
-                <div id="levelNineMenuIconText">9</div>
+            <div class="menuIcon" id="levelNineMenuIcon">
+                <div class="menuIconText" id="levelNineMenuIconText">9</div>
             </div>
-            <div id="levelTenMenuIcon">
-                <div id="levelTenMenuIconText">10</div>
+            <div class="menuIcon" id="levelTenMenuIcon">
+                <div class="menuIconText" id="levelTenMenuIconText">10</div>
             </div>
-            <div id="levelElevenMenuIcon">
-                <div id="levelElevenMenuIconText">11</div>
+            <div class="menuIcon" id="levelElevenMenuIcon">
+                <div class="menuIconText" id="levelElevenMenuIconText">11</div>
             </div>
-            <div id="levelTwelveMenuIcon">
-                <div id="levelTwelveMenuIconText">12</div>
+            <div class="menuIcon" id="levelTwelveMenuIcon">
+                <div class="menuIconText" id="levelTwelveMenuIconText">12</div>
             </div>
-            <div id="levelEndMenuIcon">
-                <div id="levelEndMenuIconText">End</div>
+            <div class="menuIcon" id="levelEndMenuIcon">
+                <div class="menuIconText" id="levelEndMenuIconText">End</div>
             </div>
             <canvas width="512" height="512" id="game"></canvas>
         </div>
