Before trying to add web workers to stop timer throttling by the browser.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Blockie</title>
     <link rel="stylesheet" href="blockie.css">
+    <script src="lib/HackTimer.js"></script>
 </head>
 
 <body>
