Added a favicon and imported a song.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Blockie</title>
     <link rel="stylesheet" href="blockie.css">
-    <script src="lib/HackTimer.js"></script>
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
 </head>
 
 <body>
