--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             <canvas width="512" height="512" id="game"></canvas>
         </div>
         <div id="gameInfo">
-            <div id="currentPoints">Points: </div>
-            <div id="currentLevel">Level: </div>
+            <div id="points">Points: </div>
+            <div id="level">Level: </div>
         </div>
         <div id="messageDisplayer"></div>
         <script src="https://unpkg.com/regenerator-runtime@0.13.1/runtime.js"></script>
