Created the HTML and CSS for the opening screen.

--- a/index.html
+++ b/index.html
@@ -15,44 +15,50 @@
                 <div id="countdownTimerSprite"></div>
                 <div id="countdownTimer"></div>
             </div>
-            <div class="menuIcon" id="levelOneMenuIcon">
-                <div class="menuIconText" id="levelOneMenuIconText">1</div>
+            <div class="openingScreenMenuIcon" id="newGameMenuIcon">
+                <div id="newGameMenuIconText">New Game</div>
             </div>
-            <div class="menuIcon" id="levelTwoMenuIcon">
-                <div class="menuIconText" id="levelTwoMenuIconText">2</div>
+            <div class="openingScreenMenuIcon" id="continueGameMenuIcon">
+                <div id="continueGameMenuIconText">Continue Game</div>
             </div>
-            <div class="menuIcon" id="levelThreeMenuIcon">
-                <div class="menuIconText" id="levelThreeMenuIconText">3</div>
+            <div class="levelMenuIcon" id="levelOneMenuIcon">
+                <div class="levelMenuIconText" id="levelOneMenuIconText">1</div>
             </div>
-            <div class="menuIcon" id="levelFourMenuIcon">
-                <div class="menuIconText" id="levelFourMenuIconText">4</div>
+            <div class="levelMenuIcon" id="levelTwoMenuIcon">
+                <div class="levelMenuIconText" id="levelTwoMenuIconText">2</div>
             </div>
-            <div class="menuIcon" id="levelFiveMenuIcon">
-                <div class="menuIconText" id="levelFiveMenuIconText">5</div>
+            <div class="levelMenuIcon" id="levelThreeMenuIcon">
+                <div class="levelMenuIconText" id="levelThreeMenuIconText">3</div>
             </div>
-            <div class="menuIcon" id="levelSixMenuIcon">
-                <div class="menuIconText" id="levelSixMenuIconText">6</div>
+            <div class="levelMenuIcon" id="levelFourMenuIcon">
+                <div class="levelMenuIconText" id="levelFourMenuIconText">4</div>
             </div>
-            <div class="menuIcon" id="levelSevenMenuIcon">
-                <div class="menuIconText" id="levelSevenMenuIconText">7</div>
+            <div class="levelMenuIcon" id="levelFiveMenuIcon">
+                <div class="levelMenuIconText" id="levelFiveMenuIconText">5</div>
             </div>
-            <div class="menuIcon" id="levelEightMenuIcon">
-                <div class="menuIconText" id="levelEightMenuIconText">8</div>
+            <div class="levelMenuIcon" id="levelSixMenuIcon">
+                <div class="levelMenuIconText" id="levelSixMenuIconText">6</div>
             </div>
-            <div class="menuIcon" id="levelNineMenuIcon">
-                <div class="menuIconText" id="levelNineMenuIconText">9</div>
+            <div class="levelMenuIcon" id="levelSevenMenuIcon">
+                <div class="levelMenuIconText" id="levelSevenMenuIconText">7</div>
             </div>
-            <div class="menuIcon" id="levelTenMenuIcon">
-                <div class="menuIconText" id="levelTenMenuIconText">10</div>
+            <div class="levelMenuIcon" id="levelEightMenuIcon">
+                <div class="levelMenuIconText" id="levelEightMenuIconText">8</div>
             </div>
-            <div class="menuIcon" id="levelElevenMenuIcon">
-                <div class="menuIconText" id="levelElevenMenuIconText">11</div>
+            <div class="levelMenuIcon" id="levelNineMenuIcon">
+                <div class="levelMenuIconText" id="levelNineMenuIconText">9</div>
             </div>
-            <div class="menuIcon" id="levelTwelveMenuIcon">
-                <div class="menuIconText" id="levelTwelveMenuIconText">12</div>
+            <div class="levelMenuIcon" id="levelTenMenuIcon">
+                <div class="levelMenuIconText" id="levelTenMenuIconText">10</div>
             </div>
-            <div class="menuIcon" id="levelEndMenuIcon">
-                <div class="menuIconText" id="levelEndMenuIconText">End</div>
+            <div class="levelMenuIcon" id="levelElevenMenuIcon">
+                <div class="levelMenuIconText" id="levelElevenMenuIconText">11</div>
+            </div>
+            <div class="levelMenuIcon" id="levelTwelveMenuIcon">
+                <div class="levelMenuIconText" id="levelTwelveMenuIconText">12</div>
+            </div>
+            <div class="levelMenuIcon" id="levelEndMenuIcon">
+                <div class="levelMenuIconText" id="levelEndMenuIconText">End</div>
             </div>
             <canvas width="512" height="512" id="game"></canvas>
         </div>
